--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
       }
   ],
   "require": {
+      "php": "^8.0.2",
       "nesbot/carbon": "^2.58",
       "bramus/router": "^1.6",
       "vlucas/phpdotenv": "^5.4"
